--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <meta name="description" content="praca domowa GoIT" />
     <title>Studio</title>
   </head>
-    <div class="header border"></div>
-    <header class="header container">
+   
+    <header>
       <a href="/Logo" class="logo"> <span class="blue-web">Web</span>Studio</a>
       <nav>
       <ul class="nav-list">
@@ -34,7 +34,7 @@
         
       </nav>
     </header>
-  </div>
+  
     <main>
       <div class="main-section">
         <h1 class="main-section-text">EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU</h1>
