dokończenie pracy domowej

--- a/portfolio.html
+++ b/portfolio.html
@@ -2,7 +2,6 @@
 <html lang="pl">
   <link rel="stylesheet" href="index.css" />
 
-  />
   <head>
     <link
       rel="stylesheet"
@@ -21,18 +20,20 @@
     />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="/Logo" class="logo">
-          <span class="blue-web">Web</span>Studio</a
-        >
-
-        <ul class="portfolio-nav-list">
-          <li><a href="Agencja" class="nav-link-black">Agencja</a></li>
-          <li><a href="Portfolio" class="nav-link-blue">Portfolio</a></li>
-          <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
-        </ul>
-
+    <header class="header">
+      <div class="style-header container">
+        <section class="logo-style">
+          <a href="/Logo" class="logo">
+            <span class="blue-web">Web</span>Studio</a
+          >
+        </section>
+        <nav>
+          <ul class="portfolio-nav-list">
+            <li><a href="Agencja" class="nav-link-black">Agencja</a></li>
+            <li><a href="Portfolio" class="nav-link-blue">Portfolio</a></li>
+            <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
+          </ul>
+        </nav>
         <ul class="contact-list">
           <li>
             <a href="mailto:info@devstudio.com" class="mail-link-portfolio"
@@ -43,154 +44,166 @@
             <a href="tel:+48111111111" class="phone-link">+48111111111</a>
           </li>
         </ul>
-      </nav>
+      </div>
     </header>
     <main>
-      <div class="button-list">
-        <button type="button" class="button-portfolio">Wszystkie</button>
-        <button type="button" class="button-portfolio">Strony</button>
-        <button type="button" class="button-portfolio">Aplikacje</button>
-        <button type="button" class="button-portfolio">Dizajn</button>
-        <button type="button" class="button-portfolio">Marketing</button>
-      </div>
-      <ul class="porfolio-main-list">
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio1.jpg?raw=true"
-              alt="Ekran laptopa"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Technocrack</p>
-              <p>Strona internetowa</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio2.jpg?raw=true"
-              alt="Koszykarze"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Grafika New Orlean vs Golden Star</p>
-              <p>Dizajn</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio3.jpg?raw=true"
-              alt="Logo restauracji Seafood"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Restauracja Seafood</p>
-              <p>Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio4.jpg?raw=true"
-              alt="Słuchawki"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Projekt Prime</p>
-              <p>Marketing</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio5.jpg?raw=true"
-              alt="Pudełka"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Projekt Boxes</p>
-              <p>Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio6.jpg?raw=true"
-              alt="Monitor"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Inspiration has no Borders</p>
-              <p>Strona internetowa</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio7.jpg?raw=true"
-              alt="Otworzona książka"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Magazyn Limited Edition</p>
-              <p>Dizajn</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio8.jpg?raw=true"
-              alt="Zawieszka"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Projekt LAB</p>
-              <p>Marketing</p>
-            </figcaption>
-          </figure>
-        </li>
-        <li class="portfolio-main-list-backgroud">
-          <figure>
-            <img
-              src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio9.jpg?raw=true"
-              alt="Pisanie na laptopie"
-              width="370"
-              height="294"
-            />
-            <figcaption>
-              <p>Growing Business</p>
-              <p>Aplikacja</p>
-            </figcaption>
-          </figure>
-        </li>
-      </ul>
+      <section class="container">
+        <div class="button-list">
+          <button type="button" class="button-portfolio">Wszystkie</button>
+          <button type="button" class="button-portfolio">Strony</button>
+          <button type="button" class="button-portfolio">Aplikacje</button>
+          <button type="button" class="button-portfolio">Dizajn</button>
+          <button type="button" class="button-portfolio">Marketing</button>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <ul class="porfolio-main-list">
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio1.jpg?raw=true"
+                  alt="Ekran laptopa"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Technocrack</p>
+                  <p class="portfolio-product">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio2.jpg?raw=true"
+                  alt="Koszykarze"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">
+                    Grafika New Orlean vs Golden Star
+                  </p>
+                  <p class="portfolio-product">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio3.jpg?raw=true"
+                  alt="Logo restauracji Seafood"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Restauracja Seafood</p>
+                  <p class="portfolio-product">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio4.jpg?raw=true"
+                  alt="Słuchawki"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Projekt Prime</p>
+                  <p class="portfolio-product">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio5.jpg?raw=true"
+                  alt="Pudełka"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Projekt Boxes</p>
+                  <p class="portfolio-product">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio6.jpg?raw=true"
+                  alt="Monitor"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Inspiration has no Borders</p>
+                  <p class="portfolio-product">Strona internetowa</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio7.jpg?raw=true"
+                  alt="Otworzona książka"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Magazyn Limited Edition</p>
+                  <p class="portfolio-product">Dizajn</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio8.jpg?raw=true"
+                  alt="Zawieszka"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Projekt LAB</p>
+                  <p class="portfolio-product">Marketing</p>
+                </figcaption>
+              </figure>
+            </li>
+            <li class="portfolio-main-list-backgroud">
+              <figure>
+                <img
+                  src="https://github.com/karolinakiljanska/goit-markup-hw-02/blob/main/images/portfolio9.jpg?raw=true"
+                  alt="Pisanie na laptopie"
+                  width="370"
+                  height="294"
+                />
+                <figcaption class="portfolio-projects-describe">
+                  <p class="portfolio-item">Growing Business</p>
+                  <p class="portfolio-product">Aplikacja</p>
+                </figcaption>
+              </figure>
+            </li>
+          </ul>
+        </div>
+      </section>
     </main>
-    <footer>
-      <a href="/Logo" class="logo"><span class="blue-web">Web</span>Studio</a>
-      <address>
-        <ul>
-          <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li class="mail-link">info@example.com</li>
-          <li class="phone-link">+48 111 111 111</li>
-        </ul>
-      </address>
-    </footer>
+    <div class="container">
+      <footer class="footer">
+        <a href="/Logo" class="footer-logo"
+          ><span class="blue-web">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-list">
+            <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li class="mail-link-portfolio">info@example.com</li>
+            <li class="phone-link">+48 111 111 111</li>
+          </ul>
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
