--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="pl">
   <head>
     <link rel="stylesheet" href="index.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
+    />
 
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap"
@@ -121,7 +125,6 @@
             <li class="our-team-background">
               <figure>
                 <img
-                  class="photo-one"
                   src="https://github.com/karolinakiljanska/goit-markup-hw-01/blob/main/images/nz1.jpg?raw=true"
                   alt="John Doe"
                   width="270"
@@ -181,15 +184,19 @@
         </div>
       </section>
     </main>
-    <footer>
-      <a href="/Logo" class="logo"><span class="blue-web">Web</span>Studio</a>
-      <address>
-        <ul>
-          <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li class="mail-link">info@example.com</li>
-          <li class="phone-link">+48 111 111 111</li>
-        </ul>
-      </address>
-    </footer>
+    <div class="container">
+      <footer class="footer">
+        <a href="/Logo" class="footer-logo"
+          ><span class="blue-web">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-list">
+            <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li class="mail-link">info@example.com</li>
+            <li class="phone-link">+48 111 111 111</li>
+          </ul>
+        </address>
+      </footer>
+    </div>
   </body>
 </html>
