--- a/index.html
+++ b/index.html
@@ -21,32 +21,34 @@
   </head>
   <body>
     <header class="header">
-      <div class="style-header container">
-        <section class="logo-style">
-          <a href="/Logo" class="logo">
-            <span class="blue-web">Web</span>Studio</a
-          >
-        </section>
-        <nav>
-          <ul class="nav-list">
-            <li><a href="Agencja" class="nav-link-blue">Agencja</a></li>
-            <li>
-              <a href="portfolio.html" class="nav-link-black">Portfolio</a>
-            </li>
-            <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
-          </ul>
-        </nav>
-        <ul class="contact-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="mail-link"
-              >info@devstudio.com</a
+      <section>
+        <div class="container style-header">
+          <div class="logo-style">
+            <a href="/Logo" class="logo">
+              <span class="blue-web">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a href="tel:+48111111111" class="phone-link">+48111111111</a>
-          </li>
-        </ul>
-      </div>
+          </div>
+          <nav>
+            <ul class="nav-list">
+              <li><a href="Agencja" class="nav-link-blue">Agencja</a></li>
+              <li>
+                <a href="portfolio.html" class="nav-link-black">Portfolio</a>
+              </li>
+              <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
+            </ul>
+          </nav>
+          <ul class="contact-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="mail-link"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+48111111111" class="phone-link">+48111111111</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </header>
 
     <main>
@@ -56,40 +58,42 @@
         </h1>
         <button class="main-section-button">Zamów usługe</button>
       </div>
-      <section class="container">
-        <ul class="lorem-ipsum-list">
-          <li>
-            <h5>LOREM IPSUM</h5>
-            <p class="lorem-ipsum-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h5>LOREM IPSUM</h5>
-            <p class="lorem-ipsum-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h5>LOREM IPSUM</h5>
-            <p class="lorem-ipsum-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <h5>LOREM IPSUM</h5>
-            <p class="lorem-ipsum-text">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
-              arcu sem. Sed non sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
+      <section>
+        <div class="container">
+          <ul class="lorem-ipsum-list">
+            <li>
+              <h5>LOREM IPSUM</h5>
+              <p class="lorem-ipsum-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h5>LOREM IPSUM</h5>
+              <p class="lorem-ipsum-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h5>LOREM IPSUM</h5>
+              <p class="lorem-ipsum-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <h5>LOREM IPSUM</h5>
+              <p class="lorem-ipsum-text">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel
+                arcu sem. Sed non sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
-      <section class="container">
-        <div>
+      <section>
+        <div class="container">
           <h2 class="what-we-do-header">Czym się zajmujemy</h2>
           <ul class="what-we-do-list">
             <li>
@@ -118,8 +122,8 @@
             </li>
           </ul>
         </div>
-        <section class="container"></section>
-        <div class="our-team">
+        <section>
+        <div class="our-team container">
           <h2 class="our-team-header">Nasz zespół</h2>
           <ul class="our-team-list">
             <li class="our-team-background">
@@ -184,8 +188,8 @@
         </div>
       </section>
     </main>
-    <div class="container">
-      <footer class="footer">
+    
+      <footer class="footer container">
         <a href="/Logo" class="footer-logo"
           ><span class="blue-web">Web</span>Studio</a
         >
@@ -197,6 +201,6 @@
           </ul>
         </address>
       </footer>
-    </div>
+    
   </body>
 </html>
