--- a/portfolio.html
+++ b/portfolio.html
@@ -21,34 +21,36 @@
   </head>
   <body>
     <header class="header">
-      <div class="style-header container">
-        <section class="logo-style">
-          <a href="/Logo" class="logo">
-            <span class="blue-web">Web</span>Studio</a
-          >
-        </section>
-        <nav>
-          <ul class="portfolio-nav-list">
-            <li><a href="Agencja" class="nav-link-black">Agencja</a></li>
-            <li><a href="Portfolio" class="nav-link-blue">Portfolio</a></li>
-            <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
-          </ul>
-        </nav>
-        <ul class="contact-list">
-          <li>
-            <a href="mailto:info@devstudio.com" class="mail-link-portfolio"
-              >info@devstudio.com</a
+      <section>
+        <div class="style-header container">
+          <div class="logo-style">
+            <a href="/Logo" class="logo">
+              <span class="blue-web">Web</span>Studio</a
             >
-          </li>
-          <li>
-            <a href="tel:+48111111111" class="phone-link">+48111111111</a>
-          </li>
-        </ul>
-      </div>
+          </div>
+          <nav>
+            <ul class="portfolio-nav-list">
+              <li><a href="Agencja" class="nav-link-black">Agencja</a></li>
+              <li><a href="Portfolio" class="nav-link-blue">Portfolio</a></li>
+              <li><a href="Kontakt" class="nav-link-black">Kontakt</a></li>
+            </ul>
+          </nav>
+          <ul class="contact-list">
+            <li>
+              <a href="mailto:info@devstudio.com" class="mail-link-portfolio"
+                >info@devstudio.com</a
+              >
+            </li>
+            <li>
+              <a href="tel:+48111111111" class="phone-link">+48111111111</a>
+            </li>
+          </ul>
+        </div>
+      </section>
     </header>
     <main>
-      <section class="container">
-        <div class="button-list">
+      <section>
+        <div class="button-list container">
           <button type="button" class="button-portfolio">Wszystkie</button>
           <button type="button" class="button-portfolio">Strony</button>
           <button type="button" class="button-portfolio">Aplikacje</button>
@@ -191,19 +193,18 @@
         </div>
       </section>
     </main>
-    <div class="container">
-      <footer class="footer">
-        <a href="/Logo" class="footer-logo"
-          ><span class="blue-web">Web</span>Studio</a
-        >
-        <address>
-          <ul class="footer-list">
-            <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
-            <li class="mail-link-portfolio">info@example.com</li>
-            <li class="phone-link">+48 111 111 111</li>
-          </ul>
-        </address>
-      </footer>
-    </div>
+
+    <footer class="footer container">
+      <a href="/Logo" class="footer-logo"
+        ><span class="blue-web">Web</span>Studio</a
+      >
+      <address>
+        <ul class="footer-list">
+          <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
+          <li class="mail-link-portfolio">info@example.com</li>
+          <li class="phone-link">+48 111 111 111</li>
+        </ul>
+      </address>
+    </footer>
   </body>
 </html>
