--- a/index.html
+++ b/index.html
@@ -122,8 +122,9 @@
             </li>
           </ul>
         </div>
-        <section>
-        <div class="our-team container">
+      </section>
+      <section class="our-team">
+        <div class="container">
           <h2 class="our-team-header">Nasz zespół</h2>
           <ul class="our-team-list">
             <li class="our-team-background">
@@ -188,8 +189,9 @@
         </div>
       </section>
     </main>
-    
-      <footer class="footer container">
+
+    <footer class="footer">
+      <div class="container">
         <a href="/Logo" class="footer-logo"
           ><span class="blue-web">Web</span>Studio</a
         >
@@ -200,7 +202,7 @@
             <li class="phone-link">+48 111 111 111</li>
           </ul>
         </address>
-      </footer>
-    
+      </div>
+    </footer>
   </body>
 </html>
