--- a/portfolio.html
+++ b/portfolio.html
@@ -194,17 +194,19 @@
       </section>
     </main>
 
-    <footer class="footer container">
-      <a href="/Logo" class="footer-logo"
-        ><span class="blue-web">Web</span>Studio</a
-      >
-      <address>
-        <ul class="footer-list">
-          <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
-          <li class="mail-link-portfolio">info@example.com</li>
-          <li class="phone-link">+48 111 111 111</li>
-        </ul>
-      </address>
+    <footer class="footer">
+      <div class="container">
+        <a href="/Logo" class="footer-logo"
+          ><span class="blue-web">Web</span>Studio</a
+        >
+        <address>
+          <ul class="footer-list">
+            <li class="adress-text">m. Warszawa, Aleje Jerozolimskie 21</li>
+            <li class="mail-link-portfolio">info@example.com</li>
+            <li class="phone-link">+48 111 111 111</li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
