--- a/index.html
+++ b/index.html
@@ -52,12 +52,14 @@
     </header>
 
     <main>
-      <div class="main-section container">
-        <h1 class="main-section-text">
-          EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
-        </h1>
-        <button class="main-section-button">Zamów usługe</button>
-      </div>
+      <secion class="main-section">
+        <div class="container">
+          <h1 class="main-section-text">
+            EFEKTYWNE ROZWIĄZANIA <br />DLA WASZEGO BIZNESU
+          </h1>
+          <button class="main-section-button">Zamów usługe</button>
+        </div>
+      </secion>
       <section>
         <div class="container">
           <ul class="lorem-ipsum-list">
